kubernetes/main/apps/default/nas/main/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: default
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 5001
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nas
  namespace: default
  labels:
    kubernetes.io/service-name: nas
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.1.3"
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 5001
    protocol: TCP
