kubernetes/main/apps/default/nas/main/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
  name: nas
  namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: &host nas.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas
                port:
                  number: 5001
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
